# empty-fastapi-hexagonal

./: .env  LICENSE  code_generator.py  docker-compose.yml  dockerfile  generator.dockerfile  generator.requirements.txt  hexagon.py  hexagonal.excalidraw  init.sh  main.py  pyproject.toml  readme.md  requirements.txt
env_vars/: auth.env  backend.env  database.env
fastapi_hexagon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hexagon_generator/: hexagon.py
hexagon_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
hexagon_generator/builtin_apps/: .env  alembic.ini  docker-compose.yml  readme.md  requirements.txt  todo
hexagon_generator/builtin_apps/env_vars/: backend.env
hexagon_generator/builtin_apps/src/: config.py
hexagon_generator/builtin_apps/src/alembic/: env.py
hexagon_generator/core/: base_check_gen.py  builtin_gen.py  code_gen.py  config.py  constant.py  generator_factory.py  model_gen.py
hexagon_generator/templates/: application_handlers.py  application_web_cases.py  domain_models.py  domain_repository.py  infrastructure_database.py  infrastructure_web.py
hexagon_generator/templates/auth/: application_handlers.py  application_schemas.py  application_service.py  application_use_cases.py  dependencies_get_user.py  domain_exceptions.py  domain_repository.py  infrastructure_database.py  infrastructure_web.py  routes.py
hexagon_generator/templates/crud/: __init__.py  application_handlers.py  application_interfaces.py  application_mappers.py  application_schemas.py  application_service.py  application_web_cases.py  domain_dtos.py  domain_entities.py  domain_exceptions.py  domain_models.py  domain_repository.py  domain_unit_of_work.py  infrastructure_database.py  infrastructure_exception_handlers.py  infrastructure_models.py  infrastructure_unit_of_work.py  infrastructure_web.py  routes.py
hexagon_generator/utils/: __init__.py  file_handler.py  path_builder.py  validators.py
mcp_server/: QUICKSTART.md  README.md  __init__.py  claude_desktop_config.example.json  requirements.txt  server.py
mcp_server/prompts/: __init__.py  completion_prompts.py
mcp_server/tools/: __init__.py  architecture_validator.py  todo_completer.py  todo_scanner.py
src/: main.py
src/alembic/: env.py
src/auth/application/: handlers.py  schemas.py  service.py
src/auth/dependencies/: get_user_with_permissions.py
src/auth/domain/: exceptions.py  repository.py
src/auth/infrastructure/: database.py  web.py
src/common/: database_connection.py  exceptions_mapping.py  router.py  std_response.py
src/user/application/: handlers.py
src/user/domain/: exceptions.py  models.py  repository.py  service.py
src/user/infrastructure/: database.py  web.py
(+78 files in other folders)
